refactor:  created components index and updated all links to components to access them from the index

--- a/events/index.mdx
+++ b/events/index.mdx
@@ -3,6 +3,6 @@ title: 'Check out tbd events lorem ipsum dolor sitare meta.'
 ---
 
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
-import { EventCardList } from '../src/components/EventCardList';
+import { EventCardList } from '@site/src/components';
 
 <EventCardList items={useCurrentSidebarCategory().items} />
