--- a/learn/discussions/learn-detail.mdx
+++ b/learn/discussions/learn-detail.mdx
@@ -8,8 +8,7 @@ sidebar_custom_props:
 ---
 
 import { content } from '@site/src/content/learn-detail';
-import { Video } from '@site/src/components/Video';
-import { DetailsSummary } from '@site/src/components/DetailsSummary';
+import { Video, DetailsSummary } from '@site/src/components';
 
 <head>
   <title>{content.meta.title}</title>
