--- a/learn/index.mdx
+++ b/learn/index.mdx
@@ -3,7 +3,7 @@ title: 'Twitter Spaces: A Blockchain Discussion'
 ---
 
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
-import { LearnCardList } from '../src/components/LearnCardList';
+import { LearnCardList } from '@site/src/components';
 
 A series hosted by Angie Jones, where the community has open discussions about blockchain technologies and the apps built on top of them.
 
