--- a/src/pages/opensource.mdx
+++ b/src/pages/opensource.mdx
@@ -3,11 +3,8 @@ hide_table_of_contents: true
 ---
 
 import metacontent from '@site/src/content/global-meta';
-import PillarList from '@site/src/components/PillarList/PillarList';
-import Button from '@site/src/components/Button/Button';
-import ButtonGroup from '@site/src/components/ButtonGroup/ButtonGroup';
 import { content } from '@site/src/content/open-source';
-import { Divider } from '@site/src/components/Divider';
+import { Divider, ButtonGroup, Button, PillarList } from '@site/src/components';
 
 <head>
   <title>{content.meta.title}</title>
