--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -4,12 +4,14 @@ hide_table_of_contents: true
 ---
 
 import metacontent from '@site/src/content/global-meta';
-import { Actors } from '@site/src/components/Actors';
-import { ButtonGroup } from '@site/src/components/ButtonGroup';
-import { ProjectList } from '@site/src/components/ProjectList';
+import {
+  Actors,
+  ButtonGroup,
+  ProjectList,
+  Divider,
+  PillarList,
+} from '@site/src/components';
 import { content } from '@site/src/content/project-content-tbdex.js';
-import { Divider } from '@site/src/components/Divider';
-import PillarList from '@site/src/components/PillarList/PillarList';
 
 <head>
   <title>{content.meta.title}</title>
