--- a/learn/index-concepts.mdx
+++ b/learn/index-concepts.mdx
@@ -4,7 +4,7 @@ title: 'Twitter Spaces: A Blockchain Discussion'
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
-import { LearnCardList } from '../src/components/LearnCardList';
+import { LearnCardList } from '@site/src/components';
 
 A series hosted by Angie Jones, where the community has open discussions about blockchain technologies and the apps built on top of them.
 
