--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -4,14 +4,16 @@ hide_table_of_contents: true
 ---
 
 import metacontent from '@site/src/content/global-meta';
-import { Actors } from '@site/src/components/Actors';
-import { ButtonGroup } from '@site/src/components/ButtonGroup';
-import { ProjectList } from '@site/src/components/ProjectList';
+import {
+  Actors,
+  ButtonGroup,
+  ProjectList,
+  Divider,
+  SwitchIllustration,
+  IconTextButton,
+  PillarList,
+} from '@site/src/components';
 import { content } from '@site/src/content/project-content-web5.js';
-import { Divider } from '@site/src/components/Divider';
-import { SwitchIllustration } from '@site/src/components/SwitchIllustration';
-import { IconTextButton } from '@site/src/components/IconTextButton';
-import PillarList from '@site/src/components/PillarList/PillarList';
 
 <head>
   <title>{content.meta.title}</title>
