refactor: remove custom-container css in favor of using “not-prose” class

--- a/src/pages/opensource.mdx
+++ b/src/pages/opensource.mdx
@@ -30,7 +30,7 @@ Our projects are open source and, where appropriate, built on open standards.
 Our work is licensed under the Apache License 2.0, and we welcome you to join us in building the future of finance and decentralized technology.
 
 <Divider type="slash" />
-<div className="custom-container">
+<div className="not-prose">
   <PillarList title={content.title} pillars={content.pillars} />
 </div>
 <Divider type="slash" />
