--- a/src/pages/projects-index.mdx
+++ b/src/pages/projects-index.mdx
@@ -29,7 +29,7 @@ import { content } from '@site/src/content/projects';
 
 ## List of Projects
 
-<div className="custom-container">
+<div className="not-prose">
   <ProjectList projects={content.projects} growToFit={false} title="" />
 </div>
 
