--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -72,19 +72,19 @@ tbDEX is a decentralized, permissionless protocol. It opens the door to Self Sov
 
 <Divider type="slash" />
 
-<div className="custom-container">
+<div className="not-prose">
   <ProjectList {...content.components} />
 </div>
 
 <Divider type="slash" />
 
-<div className="custom-container">
+<div className="not-prose">
   <Actors content={content.actors} />
 </div>
 
 <Divider type="slash" />
 
-<div className="custom-container">
+<div className="not-prose">
   <PillarList
     title={content.useCases.title}
     pillars={content.useCases.pillars}
