--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -40,11 +40,11 @@ The web democratized the exchange of information, but it's missing a key layer: 
 
 Web5 brings decentralized identity and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
-<div className="custom-container mx-[2.875rem] tablet:mx-[4.5rem] desktop:mx-[6.625rem] mt-[1.75rem] desktop:mt-[3.25rem]">
+<div className="not-prose mx-[2.875rem] tablet:mx-[4.5rem] desktop:mx-[6.625rem] mt-[1.75rem] desktop:mt-[3.25rem]">
   <SwitchIllustration {...content.web5Illustrations} />
 </div>
 
-<div className="custom-container">
+<div className="not-prose">
   <ButtonGroup
     className="pt-24"
     buttons={[
@@ -70,25 +70,25 @@ Web5 brings decentralized identity and data storage to your applications. It let
   />
 </div>
 
-<div className="custom-container mt-12">
+<div className="not-prose mt-12">
   <IconTextButton {...content.downloadPDF} />
 </div>
 
 <Divider type="slash" />
 
-<div className="custom-container">
+<div className="not-prose">
   <ProjectList {...content.components} />
 </div>
 
 <Divider type="slash" />
 
-<div className="custom-container">
+<div className="not-prose">
   <Actors content={content.actors} />
 </div>
 
 <Divider type="slash" />
 
-<div className="custom-container">
+<div className="not-prose">
 
   <PillarList title={content.useCases.title} pillars={content.useCases.pillars} />
 </div>
