--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -40,57 +40,48 @@ The web democratized the exchange of information, but it's missing a key layer: 
 
 Web5 brings decentralized identity and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
-<div className="not-prose mx-[2.875rem] tablet:mx-[4.5rem] desktop:mx-[6.625rem] mt-[1.75rem] desktop:mt-[3.25rem]">
+<div className="mx-[2.875rem] tablet:mx-[4.5rem] desktop:mx-[6.625rem] mt-[1.75rem] desktop:mt-[3.25rem]">
   <SwitchIllustration {...content.web5Illustrations} />
 </div>
 
-<div className="not-prose">
-  <ButtonGroup
-    className="pt-24"
-    buttons={[
-      {
-        type: 'button',
-        data: {
-          label: 'Getting Started',
-          url: 'https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_DWP.md',
-          isExternalLink: true,
-          imageURL: '/img/external-link-blue-icon.svg',
-        },
+<ButtonGroup
+  className="pt-24"
+  buttons={[
+    {
+      type: 'button',
+      data: {
+        label: 'Getting Started',
+        url: 'https://github.com/TBD54566975/collaboration/blob/main/projects/GETTING_STARTED_DWP.md',
+        isExternalLink: true,
+        imageURL: '/img/external-link-blue-icon.svg',
       },
-      {
-        type: 'button',
-        data: {
-          label: 'Chat',
-          url: 'https://discord.gg/tbd',
-          isExternalLink: true,
-          imageURL: '/img/external-link-blue-icon.svg',
-        },
+    },
+    {
+      type: 'button',
+      data: {
+        label: 'Chat',
+        url: 'https://discord.gg/tbd',
+        isExternalLink: true,
+        imageURL: '/img/external-link-blue-icon.svg',
       },
-    ]}
-  />
-</div>
+    },
+  ]}
+/>
 
-<div className="not-prose mt-12">
+<div className="mt-12">
   <IconTextButton {...content.downloadPDF} />
 </div>
 
 <Divider type="slash" />
 
-<div className="not-prose">
-  <ProjectList {...content.components} />
-</div>
+<ProjectList {...content.components} />
 
 <Divider type="slash" />
 
-<div className="not-prose">
-  <Actors content={content.actors} />
-</div>
+<Actors content={content.actors} />
 
 <Divider type="slash" />
 
-<div className="not-prose">
-
-  <PillarList title={content.useCases.title} pillars={content.useCases.pillars} />
-</div>
+<PillarList title={content.useCases.title} pillars={content.useCases.pillars} />
 
 </div>
