feat: Add discussions content

--- a/learn/index.mdx
+++ b/learn/index.mdx
@@ -5,6 +5,6 @@ title: 'Twitter Spaces: A Blockchain Discussion'
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
 import { LearnCardList } from '../src/components/LearnCardList';
 
-A series hosted by Angie Jones, where the community has open discussions about blockchain technologies and the apps built on top of them.
+A series hosted by [Angie Jones](https://twitter.com/techgirl1908), where the community has open discussions about blockchain technologies and the apps built on top of them.
 
 <LearnCardList items={useCurrentSidebarCategory().items} />
