create HighLightsEmbed and grid component

--- a/learn/discussions/architectural-concerns-blockchain.mdx
+++ b/learn/discussions/architectural-concerns-blockchain.mdx
@@ -1,6 +1,6 @@
 ---
 title: Architectural Concerns with Blockchain
-
+sidebar_position: 5
 sidebar_custom_props:
   type: audio
   duration: '1:26:00'
@@ -9,14 +9,21 @@ sidebar_custom_props:
   thumbnail: /img/learn/architectural_concerns_with_blockchain.png
 ---
 
-<iframe width="100%" height="300" scrolling="no" frameBorder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1288848148&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style={{
-  fontSize: "10px", 
-  color: "#cccccc",
-  lineBreak: "anywhere",
-  wordBreak: "normal",
-  overflow: "hidden",
-  whiteSpace: "nowrap",
-  textOverflow: "ellipsis",
-  fontFamily: "Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif",
-  fontWeight: "100"
-}}><a href="https://soundcloud.com/user-625850228" title="TBD" target="_blank" style={{color: "#cccccc",textDecoration: "none"}}>TBD</a> · <a href="https://soundcloud.com/user-625850228/architectural-concerns-with" title="Architectural Concerns with Blockchain with Grady Booch" target="_blank" style={{color: "#cccccc",textDecoration: "none"}}>Architectural Concerns with Blockchain with Grady Booch</a></div>
+<div className="mb-8">
+  <Audio url="https://soundcloud.com/user-625850228/architectural-concerns-with" />
+</div>
+
+An open discussion about the architecture of various blockchains and why experienced software architects are concerned.
+
+<Divider type="dotted" className="" />
+<HighlightsEmbedGrid
+  title="HIGHLIGHTS"
+  growToFit={false}
+  highlights={[
+    {
+      title: 'Permissioned vs Permissionless Blockchains',
+      url: 'https://vimeo.com/704183277',
+    },
+  ]}
+/>
+<Divider type="dotted" className="" />
