--- a/learn/discussions/blockchain-crypto-tbd.mdx
+++ b/learn/discussions/blockchain-crypto-tbd.mdx
@@ -1,76 +1,32 @@
 ---
 title: 'Blockchain, Crypto, and TBD...oh my!'
+sidebar_position: 1
 sidebar_custom_props:
   type: audio
-  duration: '1:30:26'
-  geuestslist: [Mike Brock]
+  duration: '1:30:25'
+  guestslist: [Mike Brock]
   description: "An open discussion about blockchain, bitcoin, web3, and decentralization with TBD's General Manager."
-  thumbnail: /img/media/blockchain_crypto_tbd.png
+  thumbnail: /img/learn/blockchain_crypto_tbd.png
 ---
 
-import { Divider } from '@site/src/components/Divider';
-
-import { HighlightsCard } from '@site/src/components/HighlightsCard';
-import { Video } from '@site/src/components/Video';
+import { HighlightsEmbedGrid, Divider, Audio } from '@site/src/components';
+import { content } from '@site/src/content/open-source';
 
 <div className="mb-8">
-  <iframe
-    width="100%"
-    height="300"
-    scrolling="no"
-    frameBorder="no"
-    allow="autoplay"
-    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1288848157&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-  ></iframe>
-  <div
-    style={{
-      fontSize: '10px',
-      color: '#cccccc',
-      lineBreak: 'anywhere',
-      wordBreak: 'normal',
-      overflow: 'hidden',
-      whiteSpace: 'nowrap',
-      textOverflow: 'ellipsis',
-      fontFamily:
-        'Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif',
-      fontWeight: '100',
-    }}
-  >
-    <a
-      href="https://soundcloud.com/user-625850228"
-      title="TBD"
-      target="_blank"
-      style={{ color: '#cccccc', textDecoration: 'none' }}
-    >
-      TBD
-    </a>
-    <a
-      href="https://soundcloud.com/user-625850228/blockchain-crypto-and-tbd-oh"
-      title="Blockchain, Crypto, and TBD...Oh My! with Mike Brock"
-      target="_blank"
-      style={{ color: '#cccccc', textDecoration: 'none' }}
-    >
-      Blockchain, Crypto, and TBD...Oh My! with Mike Brock
-    </a>
-  </div>
+  <Audio url="https://soundcloud.com/user-625850228/blockchain-crypto-and-tbd-oh" />
 </div>
 
 An open discussion about blockchain, bitcoin, web3, and decentralization with TBD's General Manager.
 
-<Video url="https://vimeo.com/704183946" />
-
-const content = {
-
-};
-
-<HighLightsEmbedList
-  title="What is TBD"
-  thumbnail="/img/placeholder-media-image.png"
-  url="https://www.youtube.com/watch?v=NpuPm1FsUQk"
-  type="video"
-  duration="9:22"
+<Divider type="dotted" className="" />
+<HighlightsEmbedGrid
+  title="HIGHLIGHTS"
+  growToFit={false}
+  highlights={[
+    {
+      title: 'What is TBD?',
+      url: 'https://vimeo.com/704183946',
+    },
+  ]}
 />
-
-<div className="my-[3rem]">
-  <Divider type="dotted" className="" />
-</div>
+<Divider type="dotted" className="" />
