--- a/src/pages/opensource.mdx
+++ b/src/pages/opensource.mdx
@@ -4,7 +4,13 @@ hide_table_of_contents: true
 
 import metacontent from '@site/src/content/global-meta';
 import { content } from '@site/src/content/open-source';
-import { Divider, ButtonGroup, Button, PillarList } from '@site/src/components';
+import {
+  Divider,
+  ButtonGroup,
+  Button,
+  PillarList,
+  HighlightsEmbedGrid,
+} from '@site/src/components';
 
 <head>
   <title>{content.meta.title}</title>
@@ -40,5 +46,4 @@ Our work is licensed under the Apache License 2.0, and we welcome you to join us
 Great work is built by great people with great relationships. Our governance model protects the community from behavior that doesn’t reflect our values.
 
 <ButtonGroup buttons={content.buttons} />
-
 </div>
