--- a/learn/discussions/decentralized-identity.mdx
+++ b/learn/discussions/decentralized-identity.mdx
@@ -1,11 +1,39 @@
 ---
 title: Decentralized Identity
+sidebar_position: 3
 sidebar_custom_props:
   type: audio
   duration: '1:33:43'
-  geuestslist: [Daniel Buchner, Kim Hamilton Duffy, Brooklyn Zelenka]
+  guestslist: [Daniel Buchner, Kim Hamilton Duffy, Brooklyn Zelenka]
   description: "A panel discussion on Decentralized Identity (DID) where we talk use cases, benefits, DIDs vs NFTs, and what should and shouldn't go on a blockchain."
-  thumbnail: /img/media/decentralized_identity.png
+  thumbnail: /img/learn/decentralized_identity.png
 ---
 
-<iframe width="100%" height="300" scrolling="no" frameBorder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1288848151&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style={{fontSize: "10px", color: "#cccccc",lineBreak: "anywhere", wordBreak: "normal", overflow: "hidden", whiteSpace: "nowrap", textOverflow: "ellipsis", fontFamily: "Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif", fontWeight: "100"}}><a href="https://soundcloud.com/user-625850228" title="TBD" target="_blank" style={{color: "#cccccc", textDecoration: "none"}}>TBD</a> · <a href="https://soundcloud.com/user-625850228/decentralized-identity-with" title="Decentralized Identity with Kim Hamilton Duffy, Daniel Buchner, and Brooklyn Zelenka" target="_blank" style={{color: "#cccccc", textDecoration: "none"}}>Decentralized Identity with Kim Hamilton Duffy, Daniel Buchner, and Brooklyn Zelenka</a></div>
+import { HighlightsEmbedGrid, Divider, Audio } from '@site/src/components';
+import { content } from '@site/src/content/open-source';
+
+<div className="mb-8">
+  <Audio url="https://soundcloud.com/user-625850228/decentralized-identity-with" />
+</div>
+
+A panel discussion on Decentralized Identity (DID) where we talk use cases, benefits,
+DIDs vs NFTs, and what should and shouldn't go on a blockchain.
+
+<Divider type="dotted" className="" />
+
+<HighlightsEmbedGrid
+  title="HIGHLIGHTS"
+  growToFit={false}
+  highlights={[
+    {
+      title: 'What are Decentralized Identifiers',
+      url: 'https://vimeo.com/704181883',
+    },
+    {
+      title: 'What are Verifiable Credentials',
+      url: 'https://vimeo.com/704181719',
+    },
+  ]}
+/>
+
+<Divider type="dotted" className="" />
