feat: Change download pdf button on web5 page.

--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -65,12 +65,17 @@ Web5 brings decentralized identity and data storage to your applications. It let
         imageURL: '/img/external-link-blue-icon.svg',
       },
     },
+    {
+      type: 'button',
+      data: {
+        label: 'PDF',
+        url: '/docs/Decentralized Web Platform - Public.pdf',
+        isExternalLink: true,
+        imageURL: '/img/download-icon.svg',
+      },
+    },
   ]}
 />
-
-<div className="mt-12">
-  <IconTextButton {...content.downloadPDF} />
-</div>
 
 <Divider type="slash" />
 
