--- a/learn/discussions/architectural-concerns-blockchain.mdx
+++ b/learn/discussions/architectural-concerns-blockchain.mdx
@@ -9,12 +9,31 @@ sidebar_custom_props:
   thumbnail: /img/learn/architectural_concerns_with_blockchain.png
 ---
 
+import {
+  HighlightsEmbedGrid,
+  Divider,
+  Audio,
+  BiographyList,
+} from '@site/src/components';
+
 <div className="mb-8">
   <Audio url="https://soundcloud.com/user-625850228/architectural-concerns-with" />
 </div>
 
 An open discussion about the architecture of various blockchains and why experienced software architects are concerned.
 
+<Divider type="dotted" className="" />
+<BiographyList
+  growToFit={true}
+  title="guests"
+  biographies={[
+    {
+      imageUrl: '/img/learn/headshots/grady_booch.jpg',
+      headline: 'Grady Booch',
+      description: 'Chief Scientist for Software Engineering, IBM',
+    },
+  ]}
+/>
 <Divider type="dotted" className="" />
 <HighlightsEmbedGrid
   title="HIGHLIGHTS"
