--- a/learn/discussions/blockchain-skepticism.mdx
+++ b/learn/discussions/blockchain-skepticism.mdx
@@ -9,7 +9,7 @@ sidebar_custom_props:
   thumbnail: /img/learn/blockchain_skepticism.png
 ---
 
-import { Divider, Audio } from '@site/src/components';
+import { Divider, Audio, BiographyList } from '@site/src/components';
 import { content } from '@site/src/content/open-source';
 
 <div className="mb-8">
@@ -18,4 +18,16 @@ import { content } from '@site/src/content/open-source';
 
 An open discussion between builders, spectators, and critics.
 
+<Divider type="dotted" className="" />
+<BiographyList
+  growToFit={true}
+  title="guests"
+  biographies={[
+    {
+      imageUrl: '/img/learn/headshots/kelsey_hightower.jpg',
+      headline: 'Kelsey Hightower',
+      description: 'Principle Engineer, Google Cloud',
+    },
+  ]}
+/>
 <Divider type="dotted" className="" />
