--- a/learn/discussions/decentralized-identity.mdx
+++ b/learn/discussions/decentralized-identity.mdx
@@ -9,7 +9,12 @@ sidebar_custom_props:
   thumbnail: /img/learn/decentralized_identity.png
 ---
 
-import { HighlightsEmbedGrid, Divider, Audio } from '@site/src/components';
+import {
+  HighlightsEmbedGrid,
+  Divider,
+  Audio,
+  BiographyList,
+} from '@site/src/components';
 import { content } from '@site/src/content/open-source';
 
 <div className="mb-8">
@@ -20,7 +25,28 @@ A panel discussion on Decentralized Identity (DID) where we talk use cases, bene
 DIDs vs NFTs, and what should and shouldn't go on a blockchain.
 
 <Divider type="dotted" className="" />
-
+<BiographyList
+  growToFit={true}
+  title="guests"
+  biographies={[
+    {
+      imageUrl: '/img/learn/headshots/daniel_buchner.jpg',
+      headline: 'Daniel Buchner',
+      description: 'Head of Decentralized Identity, TBD',
+    },
+    {
+      imageUrl: '/img/learn/headshots/kim_hamilton_duffy.jpg',
+      headline: 'Kim Hamilton Duffy',
+      description: 'Director of Identity and Standards, Centre',
+    },
+    {
+      imageUrl: '/img/learn/headshots/brooklyn_zelenka.jpg',
+      headline: 'Brooklyn Zelenka',
+      description: 'CTO, Fission',
+    },
+  ]}
+/>
+<Divider type="dotted" className="" />
 <HighlightsEmbedGrid
   title="HIGHLIGHTS"
   growToFit={false}
