--- a/learn/discussions/history-of-blockchains.mdx
+++ b/learn/discussions/history-of-blockchains.mdx
@@ -9,7 +9,7 @@ sidebar_custom_props:
   thumbnail: /img/learn/history_of_blockchains.png
 ---
 
-import { Divider, Audio } from '@site/src/components';
+import { Divider, Audio, BiographyList } from '@site/src/components';
 import { content } from '@site/src/content/open-source';
 
 <div className="mb-8">
@@ -18,4 +18,17 @@ import { content } from '@site/src/content/open-source';
 
 Rhian Lewis, author of The Cryptocurrency Revolution, discusses the history of money, how and why blockchain was invented, and the threats and opportunities digital currencies pose.
 
+<Divider type="dotted" className="" />
+<BiographyList
+  growToFit={true}
+  title="guests"
+  biographies={[
+    {
+      imageUrl: '/img/learn/headshots/rhian_lewis.jpg',
+      headline: 'Rhian Lewis',
+      description:
+        'Author, The Cryptocurrency Revolution: Finance in the Age of Bitcoin, Blockchains and Tokens',
+    },
+  ]}
+/>
 <Divider type="dotted" className="" />
