--- a/learn/discussions/web5-ask-me-anything.mdx
+++ b/learn/discussions/web5-ask-me-anything.mdx
@@ -10,7 +10,7 @@ sidebar_custom_props:
   thumbnail: /img/learn/web5_ama_banner.png
 ---
 
-import { Divider, Audio } from '@site/src/components';
+import { Divider, Audio, BiographyList } from '@site/src/components';
 import { content } from '@site/src/content/open-source';
 
 <div className="mb-8">
@@ -22,4 +22,26 @@ import { content } from '@site/src/content/open-source';
 
 Members of the TBD Team answer questions about Web5.
 
+<Divider type="dotted" className="" />
+<BiographyList
+  growToFit={true}
+  title="guests"
+  biographies={[
+    {
+      imageUrl: '/img/learn/headshots/daniel_buchner.jpg',
+      headline: 'Daniel Buchner',
+      description: 'Head of Decentralized Identity, TBD',
+    },
+    {
+      imageUrl: '/img/learn/headshots/moe_jangda.jpg',
+      headline: 'Moe Jangda',
+      description: 'Lead Engineer, Decentralized Web Nodes, TBD',
+    },
+    {
+      imageUrl: '/img/learn/headshots/henry_tsai.jpg',
+      headline: 'Henry Tsia',
+      description: 'Lead Engineer, Decentralized Identity Protocols, TBD',
+    },
+  ]}
+/>
 <Divider type="dotted" className="" />
