--- a/src/pages/opensource.mdx
+++ b/src/pages/opensource.mdx
@@ -10,6 +10,7 @@ import {
   Button,
   PillarList,
   HighlightsEmbedGrid,
+  TooltipWrapper,
 } from '@site/src/components';
 
 <head>
@@ -33,7 +34,7 @@ import {
 
 Our projects are open source and, where appropriate, built on open standards.
 
-Our work is licensed under the Apache License 2.0, and we welcome you to join us in building the future of finance and decentralized technology.
+Our work is licensed under the Apache License 2.0, and we welcome you to join us in building the future of finance and <TooltipWrapper trigger="decentralized">a network that is not controlled by a central entity</TooltipWrapper> technology.
 
 <Divider type="slash" />
 
