--- a/src/pages/projects/tbdex.mdx
+++ b/src/pages/projects/tbdex.mdx
@@ -10,6 +10,7 @@ import {
   ProjectList,
   Divider,
   PillarList,
+  TooltipWrapper,
 } from '@site/src/components';
 import { content } from '@site/src/content/project-content-tbdex.js';
 
@@ -38,11 +39,11 @@ The web connected us all. But money and payments have not kept pace.
 
 The legacy payments system is held together with proverbial duct tape that masks fundamental problems: final settlement of payments is slow, expensive, and never quite final. Risks get priced in as expensive account fees – or exclusion from the system itself. This hits the most economically disadvantaged the hardest.
 
-A decentralized and trustless system like Bitcoin shifts the paradigm to financial access. There are no credit checks or monthly account fees. Open, decentralized, and permissionless networks let you send money anywhere in the world, near instantly.
+A <TooltipWrapper trigger="decentralized">a network that is not controlled by a central entity</TooltipWrapper> and <TooltipWrapper trigger="trustless">trust is established in a decentralized way, for example via decentralized identity and verifiable credentials</TooltipWrapper> system like Bitcoin shifts the paradigm to financial access. There are no credit checks or monthly account fees. Open, decentralized, and <TooltipWrapper trigger="permissionless">the ability to participate in a network without the need for application or approval</TooltipWrapper> networks let you send money anywhere in the world, near instantly.
 
 So now we have both legacy payment systems and new payment systems. But how do we get from the old to the new? tbDEX bridges the worlds of legacy money and digital money.
 
-tbDEX is a decentralized, permissionless protocol. It opens the door to Self Sovereign Identity and access to the financial system for all. And because it abstracts away the complexity of decentralization, developers can focus on building great things.
+tbDEX is a decentralized, <TooltipWrapper trigger="permissionless protocol">the ability to participate in a network without the need for application or approval</TooltipWrapper>. It opens the door to <TooltipWrapper trigger="Self Sovereign Identity">an approach that gives individuals ownership and control of their digital identities</TooltipWrapper> and access to the financial system for all. And because it abstracts away the complexity of decentralization, developers can focus on building great things.
 
 <ButtonGroup
   className="pt-16"
