--- a/src/pages/projects/web5.mdx
+++ b/src/pages/projects/web5.mdx
@@ -12,6 +12,7 @@ import {
   SwitchIllustration,
   IconTextButton,
   PillarList,
+  TooltipWrapper,
 } from '@site/src/components';
 import { content } from '@site/src/content/project-content-web5.js';
 
@@ -38,7 +39,7 @@ import { content } from '@site/src/content/project-content-web5.js';
 
 The web democratized the exchange of information, but it's missing a key layer: identity. We struggle to secure personal data with hundreds of accounts and passwords we can’t remember. On the web today, identity and personal data have become the property of third parties.
 
-Web5 brings decentralized identity and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
+Web5 brings <TooltipWrapper trigger="decentralized identity">identity created, owned, and controlled by individuals, without reliance on centralized entities</TooltipWrapper> and data storage to your applications. It lets devs focus on creating delightful user experiences, while returning ownership of data and identity to individuals.
 
 <div className="mx-[2.875rem] tablet:mx-[4.5rem] desktop:mx-[6.625rem] mt-[1.75rem] desktop:mt-[3.25rem]">
   <SwitchIllustration {...content.web5Illustrations} />
