feat: Add concepts content

--- a/learn/concepts/decentralized-web-nodes.mdx
+++ b/learn/concepts/decentralized-web-nodes.mdx
@@ -1,6 +1,6 @@
 ---
-title: Decentralized Identifiers
-sidebar_position: 1
+title: Decentralized Web Nodes
+sidebar_position: 3
 hide_table_of_contents: true
 sidebar_custom_props:
   type: video
