--- a/learn/concepts/verifiable-credentials.mdx
+++ b/learn/concepts/verifiable-credentials.mdx
@@ -1,13 +1,14 @@
 ---
-title: Blockchain, Crypto and TBD oh my!
+title: Verifiable Credentials
+sidebar_position: 2
 hide_table_of_contents: true
 sidebar_custom_props:
   type: video
-  duration: '9:22'
+  duration: '2:07'
   thumbnail: /img/placeholder-media-image.png
 ---
 
-import { content } from '@site/src/content/learn-concepts-detail';
+import { content } from '@site/src/content/learn-concepts-example';
 import { Video } from '@site/src/components/Video';
 import { DetailsSummary } from '@site/src/components/DetailsSummary';
 import { Divider } from '@site/src/components/Divider';
@@ -24,14 +25,6 @@ import { Divider } from '@site/src/components/Divider';
   />
 </head>;
 
-<Video
-  url={content.url}
-  transcription={{
-    details:
-      'Lorem ipsum dolor sit amet, consectetur adipiscing elit vesti bulum at facilisis quam, et congue tellus consectetur adipiscing elit vesti bulum at facilisis quam, et congue tellus or sit amet, consectetur adipiscing elit vesti bulum at facilisis quam, et congue tellus ipsum dolor sit amet, consectetur adipiscing elit',
-    summary:
-      'Lorem ipsum dolor sit amet, consectetur adipiscing elit vesti bulum at facilisis quam, et congue tellus...',
-  }}
-/>
+<Video {...content.data} />
 
 <Divider type="dotted" className="" />
