--- a/learn/index-concepts.mdx
+++ b/learn/index-concepts.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Twitter Spaces: A Blockchain Discussion'
+title: 'Concept landing title will go here'
 ---
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
 import { LearnCardList } from '@site/src/components';
 
-A series hosted by Angie Jones, where the community has open discussions about blockchain technologies and the apps built on top of them.
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elit ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at. Neque volutpat ac tincidunt vitae semper quis lectus. Pellentesque habitant morbi tristique senectus et netus. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.
 
 <LearnCardList items={useCurrentSidebarCategory().items} />
