fix: Fix guests and highlights size

--- a/learn/discussions/blockchain-skepticism.mdx
+++ b/learn/discussions/blockchain-skepticism.mdx
@@ -20,7 +20,7 @@ An open discussion between builders, spectators, and critics.
 
 <Divider type="dotted" className="" />
 <BiographyList
-  growToFit={true}
+  growToFit={false}
   title="guests"
   biographies={[
     {
