--- a/learn/discussions/history-of-blockchains.mdx
+++ b/learn/discussions/history-of-blockchains.mdx
@@ -20,7 +20,7 @@ Rhian Lewis, author of The Cryptocurrency Revolution, discusses the history of m
 
 <Divider type="dotted" className="" />
 <BiographyList
-  growToFit={true}
+  growToFit={false}
   title="guests"
   biographies={[
     {
