--- a/learn/discussions/realities-working-blockchain.mdx
+++ b/learn/discussions/realities-working-blockchain.mdx
@@ -20,7 +20,7 @@ After a year of leaving AWS to work on blockchain technologies, Nader Dabit, sha
 
 <Divider type="dotted" className="" />
 <BiographyList
-  growToFit={true}
+  growToFit={false}
   title="guests"
   biographies={[
     {
