--- a/learn/discussions/web5-ask-me-anything.mdx
+++ b/learn/discussions/web5-ask-me-anything.mdx
@@ -24,7 +24,7 @@ Members of the TBD Team answer questions about Web5.
 
 <Divider type="dotted" className="" />
 <BiographyList
-  growToFit={true}
+  growToFit={false}
   title="guests"
   biographies={[
     {
