feat: Add events content

--- a/events/index.mdx
+++ b/events/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Check out tbd events lorem ipsum dolor sitare meta.'
+title: 'Check out TBD events'
 ---
 
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
