feat: adds twitter links to guest names on discussion pages
Resolves: #430

--- a/learn/discussions/architectural-concerns-blockchain.mdx
+++ b/learn/discussions/architectural-concerns-blockchain.mdx
@@ -30,6 +30,7 @@ An open discussion about the architecture of various blockchains and why experie
     {
       imageUrl: '/img/learn/headshots/grady_booch.jpg',
       headline: 'Grady Booch',
+      twitterLink: 'https://twitter.com/Grady_Booch',
       description: 'Chief Scientist for Software Engineering, IBM',
     },
   ]}
