--- a/learn/discussions/blockchain-skepticism.mdx
+++ b/learn/discussions/blockchain-skepticism.mdx
@@ -26,6 +26,7 @@ An open discussion between builders, spectators, and critics.
     {
       imageUrl: '/img/learn/headshots/kelsey_hightower.jpg',
       headline: 'Kelsey Hightower',
+      twitterLink: 'https://twitter.com/kelseyhightower',
       description: 'Principle Engineer, Google Cloud',
     },
   ]}
