--- a/learn/discussions/decentralized-identity.mdx
+++ b/learn/discussions/decentralized-identity.mdx
@@ -32,16 +32,19 @@ DIDs vs NFTs, and what should and shouldn't go on a blockchain.
     {
       imageUrl: '/img/learn/headshots/daniel_buchner.jpg',
       headline: 'Daniel Buchner',
+      twitterLink: 'https://twitter.com/csuwildcat',
       description: 'Head of Decentralized Identity, TBD',
     },
     {
       imageUrl: '/img/learn/headshots/kim_hamilton_duffy.jpg',
       headline: 'Kim Hamilton Duffy',
+      twitterLink: 'https://twitter.com/kimdhamilton',
       description: 'Director of Identity and Standards, Centre',
     },
     {
       imageUrl: '/img/learn/headshots/brooklyn_zelenka.jpg',
       headline: 'Brooklyn Zelenka',
+      twitterLink: 'https://twitter.com/expede',
       description: 'CTO, Fission',
     },
   ]}
