--- a/learn/discussions/history-of-blockchains.mdx
+++ b/learn/discussions/history-of-blockchains.mdx
@@ -26,6 +26,7 @@ Rhian Lewis, author of The Cryptocurrency Revolution, discusses the history of m
     {
       imageUrl: '/img/learn/headshots/rhian_lewis.jpg',
       headline: 'Rhian Lewis',
+      twitterLink: 'https://twitter.com/rhian_is',
       description:
         'Author, The Cryptocurrency Revolution: Finance in the Age of Bitcoin, Blockchains and Tokens',
     },
