--- a/learn/discussions/realities-working-blockchain.mdx
+++ b/learn/discussions/realities-working-blockchain.mdx
@@ -26,6 +26,7 @@ After a year of leaving AWS to work on blockchain technologies, Nader Dabit, sha
     {
       imageUrl: '/img/learn/headshots/nader_dabit.jpg',
       headline: 'Nader Dabit',
+      twitterLink: 'https://twitter.com/dabit3',
       description: 'Founder, Developer DAO',
     },
   ]}
