--- a/learn/discussions/web5-ask-me-anything.mdx
+++ b/learn/discussions/web5-ask-me-anything.mdx
@@ -30,16 +30,19 @@ Members of the TBD Team answer questions about Web5.
     {
       imageUrl: '/img/learn/headshots/daniel_buchner.jpg',
       headline: 'Daniel Buchner',
+      twitterLink: 'https://twitter.com/csuwildcat',
       description: 'Head of Decentralized Identity, TBD',
     },
     {
       imageUrl: '/img/learn/headshots/moe_jangda.jpg',
       headline: 'Moe Jangda',
+      twitterLink: 'https://twitter.com/moe_jangda',
       description: 'Lead Engineer, Decentralized Web Nodes, TBD',
     },
     {
       imageUrl: '/img/learn/headshots/henry_tsai.jpg',
       headline: 'Henry Tsia',
+      twitterLink: 'https://twitter.com/TheHenryTsai',
       description: 'Lead Engineer, Decentralized Identity Protocols, TBD',
     },
   ]}
