--- a/learn/discussions/web5-ask-me-anything.mdx
+++ b/learn/discussions/web5-ask-me-anything.mdx
@@ -39,7 +39,7 @@ Members of the TBD Team answer questions about Web5.
     },
     {
       imageUrl: '/img/learn/headshots/henry_tsai.jpg',
-      headline: 'Henry Tsia',
+      headline: 'Henry Tsai',
       description: 'Lead Engineer, Decentralized Identity Protocols, TBD',
     },
   ]}
