feat: Add tooltips to pages that has content in js

--- a/src/pages/projects-index.mdx
+++ b/src/pages/projects-index.mdx
@@ -3,7 +3,11 @@ hide_table_of_contents: true
 ---
 
 import metacontent from '@site/src/content/global-meta';
-import { TwoColumnContainer, ProjectList } from '@site/src/components';
+import {
+  TwoColumnContainer,
+  ProjectList,
+  TooltipWrapper,
+} from '@site/src/components';
 import { content } from '@site/src/content/projects';
 
 <head>
@@ -41,7 +45,7 @@ import { content } from '@site/src/content/projects';
 
 # All projects in the TBD family are in early prototyping.
 
-## New contributors should expect a pace of development consistent with nascent technology: larger commits, frequent refactoring, changing APIs, and incomplete feature sets.
+## New contributors should expect a pace of development consistent with <TooltipWrapper trigger="nascent">new/recently coming into existence</TooltipWrapper> technology: larger commits, frequent refactoring, changing <TooltipWrapper trigger="APIs">A document or standard that describes how to build or use such a connection or interface is called an API specification</TooltipWrapper>, and incomplete feature sets.
 
 </div>
 
