fix: adds conditional rendering for twitterLink prop in biographies component
- adds conditional rendering for twitterLink prop in biographies component
- removes empty className tags from divider component in learn section

#430

--- a/learn/concepts/decentralized-identifiers.mdx
+++ b/learn/concepts/decentralized-identifiers.mdx
@@ -27,4 +27,4 @@ import { Divider } from '@site/src/components/Divider';
 
 <Video {...content.data} />
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
