--- a/learn/discussions/architectural-concerns-blockchain.mdx
+++ b/learn/discussions/architectural-concerns-blockchain.mdx
@@ -22,7 +22,7 @@ import {
 
 An open discussion about the architecture of various blockchains and why experienced software architects are concerned.
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <BiographyList
   growToFit={false}
   title="guests"
@@ -35,7 +35,7 @@ An open discussion about the architecture of various blockchains and why experie
     },
   ]}
 />
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <HighlightsEmbedGrid
   title="HIGHLIGHTS"
   growToFit={true}
@@ -46,4 +46,4 @@ An open discussion about the architecture of various blockchains and why experie
     },
   ]}
 />
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
