--- a/learn/discussions/blockchain-skepticism.mdx
+++ b/learn/discussions/blockchain-skepticism.mdx
@@ -18,7 +18,7 @@ import { content } from '@site/src/content/open-source';
 
 An open discussion between builders, spectators, and critics.
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <BiographyList
   growToFit={false}
   title="guests"
@@ -31,4 +31,4 @@ An open discussion between builders, spectators, and critics.
     },
   ]}
 />
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
