--- a/learn/discussions/decentralized-identity.mdx
+++ b/learn/discussions/decentralized-identity.mdx
@@ -24,7 +24,7 @@ import { content } from '@site/src/content/open-source';
 A panel discussion on Decentralized Identity (DID) where we talk use cases, benefits,
 DIDs vs NFTs, and what should and shouldn't go on a blockchain.
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <BiographyList
   growToFit={false}
   title="guests"
@@ -49,7 +49,7 @@ DIDs vs NFTs, and what should and shouldn't go on a blockchain.
     },
   ]}
 />
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <HighlightsEmbedGrid
   title="HIGHLIGHTS"
   growToFit={true}
@@ -65,4 +65,4 @@ DIDs vs NFTs, and what should and shouldn't go on a blockchain.
   ]}
 />
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
