--- a/learn/discussions/history-of-blockchains.mdx
+++ b/learn/discussions/history-of-blockchains.mdx
@@ -18,7 +18,7 @@ import { content } from '@site/src/content/open-source';
 
 Rhian Lewis, author of The Cryptocurrency Revolution, discusses the history of money, how and why blockchain was invented, and the threats and opportunities digital currencies pose.
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <BiographyList
   growToFit={false}
   title="guests"
@@ -32,4 +32,4 @@ Rhian Lewis, author of The Cryptocurrency Revolution, discusses the history of m
     },
   ]}
 />
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
