--- a/learn/discussions/realities-working-blockchain.mdx
+++ b/learn/discussions/realities-working-blockchain.mdx
@@ -18,7 +18,7 @@ import { content } from '@site/src/content/open-source';
 
 After a year of leaving AWS to work on blockchain technologies, Nader Dabit, shares what it's really like working in the space.
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <BiographyList
   growToFit={false}
   title="guests"
@@ -31,4 +31,4 @@ After a year of leaving AWS to work on blockchain technologies, Nader Dabit, sha
     },
   ]}
 />
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
