--- a/learn/discussions/web5-ask-me-anything.mdx
+++ b/learn/discussions/web5-ask-me-anything.mdx
@@ -22,7 +22,7 @@ import { content } from '@site/src/content/open-source';
 
 Members of the TBD Team answer questions about Web5.
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <BiographyList
   growToFit={false}
   title="guests"
@@ -47,4 +47,4 @@ Members of the TBD Team answer questions about Web5.
     },
   ]}
 />
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
