--- a/learn/concepts/decentralized-web-nodes.mdx
+++ b/learn/concepts/decentralized-web-nodes.mdx
@@ -27,4 +27,4 @@ import { Divider } from '@site/src/components/Divider';
 
 <Video {...content.data} />
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
