--- a/learn/discussions/blockchain-crypto-tbd.mdx
+++ b/learn/discussions/blockchain-crypto-tbd.mdx
@@ -23,7 +23,7 @@ import { content } from '@site/src/content/open-source';
 
 An open discussion about blockchain, bitcoin, web3, and decentralization with TBD's General Manager.
 
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <BiographyList
   growToFit={false}
   title="guests"
@@ -36,7 +36,7 @@ An open discussion about blockchain, bitcoin, web3, and decentralization with TB
     },
   ]}
 />
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
 <HighlightsEmbedGrid
   title="HIGHLIGHTS"
   growToFit={true}
@@ -47,4 +47,4 @@ An open discussion about blockchain, bitcoin, web3, and decentralization with TB
     },
   ]}
 />
-<Divider type="dotted" className="" />
+<Divider type="dotted" />
