fix: moved image to /img folder
#438

--- a/blog/2022-04-27-what-is-web5.md
+++ b/blog/2022-04-27-what-is-web5.md
@@ -8,7 +8,7 @@ tags: [Web5]
 
 <div className="prose prose-pink">
 
-![Test Image](./what_is_web5.png)
+![Test Image](./img/what_is_web5.png)
 
 Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols.
 
