fix: moves blog images to static/img/
fixes images links
#198

--- a/blog/2022-04-27-what-is-web5.md
+++ b/blog/2022-04-27-what-is-web5.md
@@ -8,7 +8,7 @@ tags: [Web5]
 
 <div className="prose prose-pink">
 
-![](./placeholder_banner.png)
+![](/img/placeholder_banner.png)
 
 Web 5 is a decentralized platform that provides a new identity layer for the web to enable decentralized apps and protocols.
 
@@ -16,12 +16,12 @@ In the current web model, users do not own their data or identity. They are give
 
 This platform embraces the convenience of Web 2 but it also returns control back to the users, an ethos of Web 3. The harmony of these two views is what we're calling Web 5.
 
-![](./img/web5-graphic.png)
+![](/img/web5-graphic.png)
 
 ## Components of Web 5
 There are three main pillars of the decentralized web platform, all of which are based on open standards.
 
-![](./img/pillars-of-web5.png)
+![](/img/pillars-of-web5.png)
 
 ## Decentralized Identifiers
 The identifiers we know and use today are owned by the government, a company, an organization, or some other intermediary. For example, our email addresses and social media handles are identifiers associated with us but are owned and controlled by the service providers. These companies have the right to ban, disable, or delete these identifiers and we have little to no control over this.
@@ -30,7 +30,7 @@ So before we can realize truly decentralized applications, we need decentralized
 
 ​​[Decentralized Identifiers](https://www.w3.org/TR/did-core/) (DIDs) are a W3C proposed recommendation with a standardized structure that essentially links to you and your information.
 
-![](./img/did-example.png)
+![](/img/did-example.png)
 
 They are a long string of text that consists of three parts:
 * the URI scheme identifier, which is did
@@ -72,7 +72,7 @@ DID Documents are JSON files stored in decentralized storage systems such as IPF
 
 For example, Alice needs to prove she has a bank account at Acme Bank. Acme Bank issues a cryptographically signed Verifiable Credential which would be stored in Alice's identity wallet. 
 
-![](./img/acme-bank-example.png)
+![](/img/acme-bank-example.png)
 
 The credential contains the issuer as Acme and the subject as Alice, as well as the claims, which are Alice's account number and full name.
 
@@ -91,7 +91,7 @@ Your DWNs can hold both public and encrypted data. For example, in the case of a
 
 **Your decentralized web nodes do not live on the blockchain**. You can host your web nodes anywhere (your phone, computer, etc) and can replicate them across your devices and clouds and all data will be synced.
 
-![](./img/features-graphic.png)
+![](/img/features-graphic.png)
 
 While self-hosting your DWNs provides a means for decentralizing your data, we recognize some users will be more comfortable with others hosting their web nodes for convenience sake. We envision there will be vendors offering to host your web nodes for you. The good part about that is you can encrypt any private data so unlike today where cloud hosts can scan everything that you host there, you can still maintain some privacy even if you have your web nodes hosted by intermediaries.
 
@@ -149,14 +149,14 @@ Obviously all of this is pretty complicated, especially for non-technical users.
 
 A well designed identity wallet would provide ways to manage the data stored in decentralized web nodes, the decentralized IDs and the context in which they should be used, verifiable credentials, and authorizations.
 
-![](./img/identity-wallets.png)
+![](/img/identity-wallets.png)
 
 ## Decentralized Web Apps
 Web 5 enables developers to build decentralized web applications (DWAs) on top of it and it’s all open source!  You're free to use it as your foundation and focus your attention on what you really care about, your app. Web5 brings to DWAs what cloud and application servers bring to enterprise apps. It does the hard part. It brings decentralization. By building your apps on top of Web 5, you get decentralization and identity and data management as part of the platform.
 
 This is definitely a fundamental change in how we exchange data, but it's not a total overhaul of the web we already know. This works like Progressive Web Apps, but you'd add the decentralized web node SDK and then applications are free to really go serverless because the data isn't stored with them.
 
-![](./img/pwa-dwa.png)
+![](/img/pwa-dwa.png)
 
 The sky's the limit to what you can build on top of this platform, but here are some cool basic examples.
 
@@ -167,7 +167,7 @@ In this example, Groove has access to write to Alice's decentralized web node an
 
 Tidal has access to read from Alice's DWN, so can read the new entry that was added by Groove, and now Alice has her playlist readily available on both apps.
 
-![](./img/music-to-my-ears.png)
+![](/img/music-to-my-ears.png)
 
 With the continuous utilization of the data across apps, not only do Groove and Tidal get access to Alice's data, but they use it to improve her user experience, thus creating a stronger experience than Alice could have ever gotten had she not used this tech.
 
@@ -179,7 +179,7 @@ Web 5 can help unify these various app experiences.
 
 If Alice gives the hotel, the airline, and the rental car agency access to the `Reservation` and `Trip` objects in her DWN, they can react and adjust accordingly to any changes made.
 
-![](./img/hotel-travel-plans.png)
+![](/img/hotel-travel-plans.png)
 
 These are just a few applications that can be realized by building on top of Web 5. There's so many more possibilities once the web is truly decentralized the way it was always intended to be.
 
