--- a/src/content/projects/tbdex/proving-your-identity.mdx
+++ b/src/content/projects/tbdex/proving-your-identity.mdx
@@ -10,8 +10,8 @@ Alice holds a digital wallet that securely manages all aspects of her identity, 
   Unique address to personal information that may be required for currency
   exchange with a regulated financial institution
 </TooltipWrapper> credentials, and <TooltipWrapper trigger="autorizations">
-  {' '}
-  permissions granted for another person or app to view or exchange data with you{' '}
+  permissions granted for another person or app to view or exchange data with
+  you
 </TooltipWrapper> for external apps and entities. Alice uses her wallet to request
 USD in exchange for 100 units of cryptocurrency. Because Alice is
 <TooltipWrapper trigger="off-ramping">
